--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sarmayadaari </title>
+  <title>Sarmaya karo </title>
 
   <!-- 
     - favicon link
@@ -36,7 +36,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.png" alt="Sarmayadaari logo">
+        <img src="./assets/images/logo.png" alt="Sarmaya karo logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -94,11 +94,11 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title" id = "hero-name"><u>SARMAYADAARI</u> </h1>
+            <h1 class="h1 hero-title" id = "hero-name"><u>Sarmaya karo</u> </h1>
             <h1 class="h1 hero-title"> A Low Risk  way to Invest your Money</h1>
 
             <p class="hero-text">
-              At Sarmayadaari, we believe in empowering individuals to take control of their financial future. Whether you're a student just starting out, a freelancer managing your own business, or a woman looking to make smart financial decisions, our platform is designed to help you invest with confidence.
+              At Sarmaya karo, we believe in empowering individuals to take control of their financial future. Whether you're a student just starting out, a freelancer managing your own business, or a woman looking to make smart financial decisions, our platform is designed to help you invest with confidence.
 
 
             </p>
