--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
             <h1 class="h1 hero-title" id = "hero-name"><u>Sarmaya karo</u> </h1>
             <h1 class="h1 hero-title"> A Low Risk  way to Invest your Money</h1>
+            <h1 class="h2 hero-title">Sarmmaya karo , Aagay Barho </h2>
 
             <p class="hero-text">
               At Sarmaya karo, we believe in empowering individuals to take control of their financial future. Whether you're a student just starting out, a freelancer managing your own business, or a woman looking to make smart financial decisions, our platform is designed to help you invest with confidence.
